--- a/package.json
+++ b/package.json
@@ -1,9 +1,38 @@
 {
   "name": "mtg-life-counter",
-  "version": "1.0.0",
-  "description": "A life counter for the game Magic: The Gathering",
-  "main": "index.js",
-  "repository": "https://github.com/chriszimmerman/mtg-life-counter.git",
-  "author": "Chris Zimmerman <chris@chriszimmerman.net>",
-  "license": "MIT"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-mock/state": "^0.1.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "react-mock": "^6.0.1"
+  }
 }
